--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 							<p class="ae-3 fromLeft"><span class="opacity-8"></span>We conducted a close reading of the speeches in our corpus. Through the thoughtful, critical analysis focusing on significant details, we wanted to recognize the rhetorical devices that inform the text's form, craft, and meanings. We were interested in seeing if there were rhetorical patterns across speeches. In order to analyze the political speeches, we have applied a selection of ten rhetorical figures out of the several devices used in literature. In this way we were able to outline some common pattern in both the stylistic and the linguistic form. We used also three features to stress the semantic content of the texts, involving the semantic point of view in our analysis.
               METAPHORS and SIMILE<br>
               <p>Metaphors are linguistic symbols which gave concrete labels to abstract ideas (Kulo, 2009). Metaphor is a type of analogy and is closely related to other rhetorical figures of speech that achieve their effects via association, comparison or resemblance including allegory, hyperbole, and simile (David, 2014).</p>
+
               ILLEISM<br>
               <p>Illeism is the act of referring to oneself in the third person instead of first person (Wikipedia). It's a spread rhetorical practice in politics, starting from Julius Caesar's De Bello Gallico through Gorbachev, Nixon, Trump and Bernie Sanders. This stylistic trope involves also the sports and arts environments.</p>
               QUOTATION<br>
@@ -730,40 +731,9 @@
 				<div class="fix-12-12 toCenter topmargin">
 					<div class="fix-7-12">
 						<p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
-						<h1 class="ae-2 fromAbove margin-bottom-2">Recurrent Patterns</h1>
+						<h1 class="ae-2 fromAbove margin-bottom-2">Recurrent Metaphors</h1>
 					</div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>Through our analysis we were able to draw a network of connections, references and patterns. We decided to stress three main recurrent contents, able to stimulate reflection and interpretation.</p>
-          <div class="ae-3 fromLeft">
-              METAPHORS<br>
-              <p>The first interesting outcome regards the employment of <em>metaphors</em>.
-              In almost all the Rally speeches of our corpus we found a marked strand represented by similar metaphors. We find a close similarity in the employed semantics of the following metaphors:<br>
-              <quote>They’re pursuing the insane impeachment witch hunt. Trump</quote>
-              <quote>This is nothing but a partisan witch hunt, sabotage. Trump</quote>
-              <quote>The trial of the ghosts of history that never return. Salvini</quote>
-              <quote>Democrats are on a crusade to destroy our democracy. Trump</quote>
-              <quote>They’ll give me Pinocchios. Trump</quote>
-              <quote>I had a lot of the rhinos fighting me. Trump</quote>
-              <quote>There is a tyrannical father. Salvini</quote>
-              All these metaphors evoke the presence of a reckless persecutor, embodied by different political players. EU, Democrats and political opponents are the favorite actor performing a pointless hunt against the speaker.
-              Witch hunt, trial of ghosts from the past, crusade: all these terms convey the idea of foolishness and ferocity. The speaker end up to be the <em>victims</em> of a senseless hunt.
-              </p>
-              OPPOSITION: the creation of polarities<br>
-              <p>The second point is represented by <em>opposition</em>. The construction of two different polarity is a crucial point in the RWP rhetorics. It is often expressed by the creation of the so called ‘black-and-white’’ rhetorics (Blassnig e al., 2018). Thanks to a Manichean and moralistic juxtaposition between the two parts it’s possible to individuate different recurrent couples:<br>
-              "good people" and "evil élite"<br>
-              "speaker" and "partisan media"<br>
-              "homeland" and "evil economic powers"<br>
-              "traditions" and "gender ideology"<br>
-              "religion" and "profanity of abortion"<br>
-              This simple but effective fallacies convey the sense of confusion and insecurity that invite the audience to identify the guilts of their issues in simpler targets.</p>
-              
-              FIRST PLACED<br>
-              <p>The last trope worth to mention, it’s the most identificative feature of RWP, embodied by the following statements:<br>
-              America first<br>
-              Prima gli Italiani<br>
-              Brasil acima de tudo<br>
-              These simple but significative slogans are the core of the RWP rhetorics. The sovereignty issue turns into a reorganization of priorities in which the superiority of the Homeland and its citizens is the clue of the discourse. It’s not a matter of reappropriation of agency in the political and international environment, moreover it’s a real will of prevarication over the others, a revenge against the wounds of a humiliating past.</p>
-
-            </div>
+					<p class="ae-3 fromLeft"><span class="opacity-8"></span>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
 				</div>
 
 			</div>
@@ -1756,14 +1726,14 @@
               <h3>Andrea Poltronieri</h3>
 							<div class="price ae-5"><img src="assets/img/andrea.jpg" height="150"/></div>
               <div class="ae-7">
-                <h6 class="uppercase bold small opacity-4">Your Title</h6>
+                <h6 class="uppercase bold small opacity-4">Python Advocate</h6>
               </div>
               <div class="margin-top-3 margin-bottom-3 equalElement ae-8">
                 <ul class="p tiny">
-									<li><strong>Main Area of Interest</strong></li>
-									<li><strong>Main Area of Interest</strong></li>
-                  <li class="opacity-7">Area of Interest</li>
-                  <li class="opacity-7">Area of Interest/li>
+									<li><strong>Natural Language Processing</strong></li>
+									<li><strong>Machine Learning</strong></li>
+                  <li class="opacity-7">Musical Computing</li>
+                  <li class="opacity-7">Pattern Recognition</li>
                 </ul>
               </div>
               <a href="https://www.linkedin.com/in/andrea-poltronieri21/" class="button gradient wide cropSides cropBottom ae-9">LinkedIn</a>
