--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 						<li class="col-6-12 left">
 							<h1 class="ae-2 fromLeft">Close Reading</h1>
-							<p class="ae-3 fromLeft"><span class="opacity-8"></span>We conducted a close reading of the speeches in our corpus. Through the thoughtful, critical analysis focusing on significant details, we wanted to recognize the rhetorical devices that inform the text's form, craft, and meanings. We were interested in seeing if there were rhetorical patterns across speeches. In order to analyze the political speeches, we have applied a selection of ten rhetorical figures out of the several devices used in literature. In this way we were able to outline some common pattern in both the stylistic and the linguistic form. We used also three features to stress the semantic content of the texts, involving the semantic point of view in our analysis.
+							<p class="ae-3 fromLeft"><span class="opacity-8"></span>We conducted a close reading of the speeches in our corpus. Through the thoughtful, critical analysis focusing on significant details, we wanted to recognize the rhetorical devices that inform the text's form, craft, and meanings. We were interested in seeing if there were rhetorical patterns across speeches. In order to analyze the political speeches, we have applied a selection of ten rhetorical figures out of the several devices used in literature. In this way we were able to outline some common pattern in both the stylistic and the linguistic form. We used also three features to stress the semantic content of the texts, involving the semantic point of view in our analysis.</p>
               METAPHORS and SIMILE<br>
               <p>Metaphors are linguistic symbols which gave concrete labels to abstract ideas (Kulo, 2009). Metaphor is a type of analogy and is closely related to other rhetorical figures of speech that achieve their effects via association, comparison or resemblance including allegory, hyperbole, and simile (David, 2014).</p>
 
@@ -733,8 +733,39 @@
 						<p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
 						<h1 class="ae-2 fromAbove margin-bottom-2">Recurrent Metaphors</h1>
 					</div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph. </p>
-				</div>
+					<p class="ae-3 left fromLeft"><span class="opacity-8">Through our analysis we were able to draw a network of connections, references and patterns between the speeches of our corpus. We decided to stress three main recurrent contents, able to stimulate reflection and interpretation.</span></p>
+					<div class="fix-12-12 toCenter smallmargin">
+						<p class="ae-3 left fromLeft">The first interesting outcome regards the employment of <em>metaphors</em>.</p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8"> In almost all the Rally speeches of our corpus we found a marked strand represented by similar metaphors. We find a close similarity in the employed semantics of the following metaphors:</span></p>
+						<p class="ae-3 center fromLeft">They’re pursuing the insane impeachment witch hunt. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft">This is nothing but a partisan witch hunt, sabotage. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft">The trial of the ghosts of history that never return.<span class="opacity-8"> Salvini</span></p>
+						<p class="ae-3 center fromLeft">Democrats are on a crusade to destroy our democracy. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft">They’ll give me Pinocchios. <span class="opacity-8"> Trump</span></p>
+						<p class="ae-3 center fromLeft">I had a lot of the rhinos fighting me. <span class="opacity-8">Trump</span></p>
+						<p class="ae-3 center fromLeft">There is a tyrannical father. <span class="opacity-8">Salvini</span></p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8">All these metaphors evoke the presence of a reckless persecutor, embodied by different political players. EU, Democrats and political opponents are the favorite actor performing a pointless hunt against the speaker. Witch hunt, trial of ghosts from the past, crusade: all these terms convey the idea of foolishness and ferocity. The speaker end up to be the <em>victims</em> of a senseless hunt.</span></p>
+					</div>
+					<div class="fix-12-12 toCenter smallmargin">
+						<p class="ae-3 left fromLeft">The second point of interested is <em>opposition</em></p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8"> The construction of two different polarity is a crucial point in the RWP rhetorics. It is often expressed by the creation of the so called ‘black-and-white’’ rhetorics (Blassnig e al., 2018). Thanks to a Manichean and moralistic juxtaposition between the two parts it’s possible to individuate different recurrent couples:</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">"good people" and the "evil elite"</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">“speaker” and “partisan media”</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">“homeland” and “evil economic powers”</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">“traditions” and “gender ideology”</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">“religion” and “profanity of abortion”</span></p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8">This simple but effective fallacies convey the sense of confusion and insecurity that invite the audience to identify the guilts of their issues in simpler targets. </span></p>
+						<p class="ae-3 fromLeft"><span class="opacity-8"></span></p>
+					</div>
+					<div class="fix-12-12 toCenter smallmargin">
+						<p class="ae-3 left fromLeft">The last trope worth to mention, it’s the most identificative feature of RWP, the idea of <em>_My Country_ First </em>.</p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8">The idea is embodied in the following statements:</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">America first</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">Prima gli Italiani</span></p>
+						<p class="ae-3 center fromLeft"><span class="opacity-8">Brasil acima de tudo</span></p>
+						<p class="ae-3 left fromLeft"><span class="opacity-8">These simple but significative slogans are the core of the RWP rhetorics. The sovereignty issue turns into a reorganization of priorities in which the superiority of the homeland and its citizens. The key of the discourse becomes a matter of reappropriation of agency in the political and international environment, with a will of prevarication over others, and the idea of revenge against the wounds of a humiliating past. </span><p>
+					</div>
+			</div>
 
 			</div>
     </div>
