--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 				</ul>
 			<li><a href="#speechgenerator">Speech Generator</a></li>
 			<li><a href="#ontology">Ontology</a></li>
+			<li><a href="#bibliography">Bibliography</a></li>
     </ul>
     <ul class="subMenu small opacity-8">
       <li><a href="#team">The Team</a></li>
@@ -1690,7 +1691,78 @@
   <div class="background" style="background-image:url(assets/img/background/img.jpg)"></div>
 </section>
 
-<!-- Slide 12 (#83) The Team -->
+<!-- Slide 12 (#91) Bibliography-->
+<section class="slide fade-6 kenBurns" id="bibliography">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+
+				<div class="fix-10-12 topmargin">
+					<h1 class="ae-1">Bibliography</h1>
+					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We based our project on a sizable amount of research on methods of rhetorical analysis, natural language processing, current events and political analysis. Furthermore, we reused algorithms and python libraries available to the public. Find them below.</p>
+				</div>
+
+				<div class="fix-12-12 topmargin">
+					<h1 class="ae-3 left fromLeft ">Academic Papers and News<span class="opacity-8"></span></h1>
+					<ul class="grid">
+						<li class="col-12-12 center ae-5 fromCenter">
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Blassnig, S., Büchel, F., Ernst, N. et al. (2018). Populism and Informal Fallacies: An Analysis of Right-Wing Populist Rhetoric in Election Campaigns. 33: 107. <a href="https://doi.org/10.1007/s10503-018-9461-2">https://doi.org/10.1007/s10503-018-9461-2</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">“Bolsonaro Propõe 'Pacto Nacional' e Fala Em 'Reconstruir' o País Ao Tomar Posse No Congresso.” G1, 1 Jan. 2019, g1.globo.com/politica/noticia/2019/01/01/bolsonaro-propoe-pacto-nacional-ao-tomar-posse-no-congresso-nacional.ghtml.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">“Brazilian President Speaks out against 'Media Lies' Surrounding Amazon Fires | UN News.” United Nations, United Nations, 24 Sept. 2019, news.un.org/en/story/2019/09/1047192.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Daquino, M., Peroni, S., Tomasi, F., & Vitali, F. (2014). Political Roles Ontology (PRoles): enhancing archival authority records through Semantic Web technologies. Procedia computer science, 38, 60-67.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">David, M.K. (2014). Language, Power and Manipulation: The Use of Rhetoric in Maintaining Political Influence. Frontiers of Language and Teaching, 5(1), 164-170.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Fetzer, A. (2019). “And I quote”: Forms and functions of quotations in Prime Minister's questions. Journal of Pragmatics, Elsevier</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Kulo, L. (2009). Linguistic features in political speeches - how language can be used to impose certain moral or ethical values in people, 2.2, 3-4.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Moreira, S., Batista, D., Carvalho, P., Couto, F. M., & Silva, M. J. (2011, June). POWER-Politics Ontology for Web Entity Retrieval. In International Conference on Advanced Information Systems Engineering (pp. 489-500). Springer, Berlin, Heidelberg.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Proksch, S. O., Lowe, W., Wäckerle, J., & Soroka, S. (2019). Multilingual sentiment analysis: A new approach to measuring conflict in legislative speeches. Legislative Studies Quarterly, 44(1), 97-131.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Sateli, B., & Witte, R. (2015, May). What's in this paper?: Combining Rhetorical Entities with Linked Open Data for Semantic Literature Querying. In Proceedings of the 24th International Conference on World Wide Web (pp. 1023-1028). ACM.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">“Trump Elogia Discurso De Posse De Jair Bolsonaro.” G1, 1 Jan. 2019, g1.globo.com/mundo/noticia/2019/01/01/trump-elogia-discurso-de-posse-de-jair-bolsonaro.ghtml.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Young, L., & Soroka, S. (2012). Affective news: The automated coding of sentiment in political texts. Political Communication, 29(2), 205-231.</span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8">Zhang, J., Spirling, A., Danescu-Niculescu-Mizil, C. (2017). Asking too much? The rhetorical role of questions in political discourse. Association for Computational Linguistics, 1558-1572</span></p>
+						</li>
+					</ul>
+				</div>
+
+				<div class="fix-12-12 topmargin">
+					<h1 class="ae-3 left fromLeft ">Algorithms<span class="opacity-8"></span></h1>
+					<ul class="grid">
+						<li class="col-12-12 center ae-5 fromCenter">
+				<p class="ae-3 left fromLeft"><span class="opacity-8"></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://github.com/adashofdata/nlp-in-python-tutorial">Adashofdata's Natural Language Processing in Python Tutorial</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://www.machinelearningplus.com/nlp/topic-modeling-visualization-how-to-present-results-lda-models/">Machine Learning Plus: Topic modeling visualization </a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://www.datacamp.com/community/tutorials/wordcloud-python">Data Camp: Generating Word Clouds in Python</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://voyant-tools.org/">Voyant Tools: See Through Your Text </a></span></p>
+
+						</li>
+					</ul>
+				</div>
+
+				<div class="fix-12-12 topmargin">
+					<h1 class="ae-3 left fromLeft ">Python Libraries<span class="opacity-8"></span></h1>
+					<ul class="grid">
+						<li class="col-12-12 center ae-5 fromCenter">
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://pandas.pydata.org/">Pandas</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://scikit-learn.org/stable/">Sklearn</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://pypi.org/project/wordcloud/">Wordcloud</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://matplotlib.org/">Matplotlib</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://numpy.org/">Numpy</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://github.com/AYLIEN/aylien_textapi_python">Aylien</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://textblob.readthedocs.io/en/dev/">Textblob</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://radimrehurek.com/gensim/">Gensim</a></span></p>
+							<p class="ae-3 left fromLeft"><span class="opacity-8"><a href="https://www.nltk.org/">NLTK</a></span></p>
+						</li>
+					</ul>
+				</div>
+
+
+
+      </div>
+    </div>
+  </div>
+<div class="background" style="background-image:url(assets/img/background/img.jpg)"></div>
+</section>
+
+<!-- Slide 13 (#83) The Team -->
 <section class="slide fade-6 kenBurns" id="team">
   <div class="content">
     <div class="container">
@@ -1757,7 +1829,7 @@
   <div class="background" style="background-image:url(assets/img/background/img.jpg)"></div>
 </section>
 
-<!-- Slide 13 (#95) Contact Us-->
+<!-- Slide 14 (#95) Contact Us-->
 <section class="slide fade-6 kenBurns" id="contact">
   <div class="content">
     <div class="container">
