--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
 
 					</div>
 				</div>
+				<p class="margin-bottom-2 ae-1 counter">COUNTER</p>
 				<div class="fix-12-12 topmargin">
 					<ul class="grid">
 						<li class="col-3-12  ae-4 fromLeft">
@@ -400,7 +401,6 @@
                 <p>We will make America safe again.</p>
                 <p>And, yes, together, we will make America great again. Thank you, God bless you, and God bless America.</p>
 							</div>
-
 							<div id="txt_2" class="text_corpus">
 								<h1>Trump - Minnesota Rally</h1>
 								<h2>10th October 2019</h2>
@@ -1626,10 +1626,7 @@
 
 				<div class="fix-10-12 ">
 					<h1 class="ae-1">Knowledge Base </h1>
-					<p class="ae-3 left fromLeft"><span class="opacity-8">Once ASAP was finished as a logical and error-free ontology, we decided to populate it with parts of our initial corpus. Because we are especially interested in Right wing populist rhetorics and speeches, we decided to formalize the knowledge in three speeches:</span></p>
-					<p class="ae-3 left fromLeft"><span class="opacity-8">Trump’s Inaugural Speech</span></p>
-					<p class="ae-3 left fromLeft"><span class="opacity-8">Bolsonaro’s Inaugural Speech</span></p>
-					<p class="ae-3 left fromLeft"><span class="opacity-8">Salvini’s Speech to the Senate</span></p>
+					<p class="ae-3 left fromLeft"><span class="opacity-8">Once ASAP was finished as a logical and error-free ontology, we decided to populate it with parts of our initial corpus. Because we are especially interested in Right wing populist rhetorics and speeches, we decided to formalize the knowledge in Trump’s Inaugural Speech.</span></p>
 					<p class="ae-3 left fromLeft"><span class="opacity-8">We analyzed these speeches through close reading, word frequency analysis, topic modelling, sentiment analysis, and lexical space (complexity) analysis. With these results, we filled in the content part of the ontology. With independent research, we filled in the context part.</span></p>
 				</div>
 
@@ -1880,8 +1877,6 @@
 
 <!--Scripts-->
 
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/typed.js" type="text/javascript"></script>
 <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
 <script src="js/jquery.jkit.1.2.16.min.js"></script>
 <script src="js/custom.js" type="text/javascript"></script>
