--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
         		</li>
 						<li class="col-2-12  ae-4 fromLeft">
 							<div class="buttonContainer_ret">
-								<button class="button  gradient ae-4 bmetaph"id="metaph">Methaphor</button>
+								<button class="button  gradient ae-4 bmetaph"id="metaph">Metaphor</button>
 								<button class="button  gradient ae-4 bsimile"id="simile">Similitude</button>
 								<button class="button  gradient ae-4 bthirdp"id="thirdp">Third Person</button>
 								<button class="button  gradient ae-4 bquotes"id="quotes">Quotes</button>
